Sun Feb 06 19:11:05 2000  Loic Dachary  <loic@ceic.com>

	* configure.in: Fix inconsistencies between default values 
	  shown by ./configure and actual defaults.

	* htdoc/install.html: change example version 3.1 to 3.2
	  Commented out warning about libguile.
	  Replace CONFIG variables by configure.in options.
	  Specify default value for each of them.
	  Replace (and move) make depend by automake (distributed
	  Makefiles do not include dependency generation)
	  Added section for running tests.
	  Added section on shared libraries.

	* configure.in: use AM_CONDITIONAL for --enable-tests

	* Makefile.am: use automake conditionals for subdir so
	  that make dist knows what to distribution --enable-tests
	  specified or not.

	* db/Makefile.in: allow make dist to work outside the source
	  tree.

Sat Feb 05 18:31:04 2000  Loic Dachary  <loic@ceic.com>

	* test/word.cc (SkipTestEntries): The fix of 
	  WordList::SkipUselessSequentialWalking actually saves us
	  a few hops when walking lists of words.

Fri Feb 04 17:28:32 2000  Loic Dachary  <loic@ceic.com>

	* htword/WordKey.cc,WordReference.cc,WordRecord.cc (Print): use
	  cerr instead of cout for immediate printing under debugger.

Thu Feb  3 16:06:45 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/Document.cc (RetrieveLocal): fix bug that prevented local
	filesystem digging, because max_doc_size was initialized to 0.
	Now sets it to max_doc_size for current url.

Thu Feb  3 12:36:56 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* installdir/Makefile.{am,in}: install mime.types as mime.types,
	not as htdig.conf.

	* htfuzzy/EndingsDB.cc (createDB): fix code to use MV macro in
	system() command, not hard-coded "MV" string literal, and use
	get() on config objects to avoid passing String objects to form().

Wed Feb  2 19:44:33 2000  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htlib/HtDateTime.cc (SetRFC1123): Strip off weekday, if present
	and use LOOSE format.
	(SetRFC850): Ditto.
