@@ -1,3 +1,8 @@
+Mon Feb 07 14:05:37 2000 CEST Gabriele Bartolini  <g.bartol@comune.prato.it>
+
+        * htnet/HtHTTP.cc: fixed a bug in ReadChunkedBody() function
+	  regarding document size assignment (raised by Valdas Andrulis)
+
 Sun Feb 06 19:11:05 2000  Loic Dachary  <loic@ceic.com>
 
 	* configure.in: Fix inconsistencies between default values 
